<resources>
    <string name="app_name">Blatzarsoft</string>
    <string name="title_activity_main">Blatzarsoft</string>
    <string name="title_activity_login">Blatzarsoft</string>
    <string name="title_home">Lunch</string>
    <string name="title_dashboard">Schedule</string>
    <string name="placeholder_food">No food found :(</string>
    <string name="week_placeholder">Week</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="login_title">Login</string>
    <string name="login_tip">Use the same password and username as on Schoolsoft</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="schoolname">School name</string>
    <string name="login_button">Login</string>
    <string name="placeholder_lesson">PLACEHOLDER LESSON</string>
    <string name="placeholder_location">PLACEHOLDER LOCATION</string>
    <string name="placeholder_time">12:25 – 14:20</string>
    <string name="login_school_list_hint">School</string>
    <string name="weekPickerText">Select week</string>
    <string name="settings_title">Settings</string>
    <string name="settings_automatic_nightmode">Automatic night mode</string>
    <string name="settings_automatic_nightmode_summary">Based on phone theme</string>
    <string name="settings_nightmode">Dark mode</string>
    <string name="settings_theme_category">Theme</string>
    <string name="week_number">Week %1$s</string>
    <string name="error_404">Could not connect to school</string>
    <string name="error_401">Incorrect login information</string>
    <string name="error_network">Error logging in, check your connection</string>
    <string name="error_generic">Error: %1$s</string>
    <string name="week_selector">Pick week</string>
    <string name="settings_language_category">Language</string>
    <string name="settings_language">Change language to English</string>
</resources>
