<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/lunchRefreshLayout"
>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/lunchRoot"
    >
        <androidx.cardview.widget.CardView
                android:id="@+id/weekCard"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:backgroundTint="@color/colorPrimary"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="10dp"
        >

            <TextView android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:textStyle="bold"
                      android:gravity="center"
                      android:id="@+id/weekText"
                      android:textColor="@android:color/white"
                      android:text="@string/week_placeholder"
            >
            </TextView>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
                android:id="@+id/monday"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:backgroundTint="@color/colorPrimary"
                app:cardCornerRadius="4dp"
                android:layout_margin="10dp"
                app:layout_constraintTop_toBottomOf="@+id/weekCard"
                app:layout_constraintBottom_toTopOf="@+id/tuesday"
        >
            <TextView android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:gravity="center_vertical"
                      android:layout_marginStart="20dp"
                      android:layout_marginEnd="20dp"
                      android:layout_marginTop="30dp"
                      android:textColor="@android:color/white"
                      android:id="@+id/mondayText"
                      android:text="@string/placeholder_food"
            >
            </TextView>
            <TextView android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:textStyle="bold"
                      android:gravity="center|top"
                      android:layout_marginTop="10dp"
                      android:textColor="@android:color/white"
                      android:text="@string/monday"
            >
            </TextView>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
                android:id="@+id/tuesday"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:backgroundTint="@color/colorPrimary"
                app:cardCornerRadius="4dp"
                android:layout_margin="10dp"
                app:layout_constraintTop_toBottomOf="@+id/monday"
                app:layout_constraintBottom_toTopOf="@+id/wednesday"
        >
            <TextView android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:gravity="center_vertical"
                      android:layout_marginStart="20dp"
                      android:layout_marginEnd="20dp"
                      android:layout_marginTop="30dp"
                      android:textColor="@android:color/white"
                      android:id="@+id/tuesdayText"
                      android:text="@string/placeholder_food"
            >
            </TextView>
            <TextView android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:textStyle="bold"
                      android:gravity="center|top"
                      android:layout_marginTop="10dp"
                      android:textColor="@android:color/white"
                      android:text="@string/tuesday"
            >
            </TextView>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
                android:id="@+id/wednesday"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:backgroundTint="@color/colorPrimary"
                app:cardCornerRadius="4dp"
                android:layout_margin="10dp"
                app:layout_constraintTop_toBottomOf="@+id/tuesday"
                app:layout_constraintBottom_toTopOf="@+id/thursday"
        >
            <TextView android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:gravity="center_vertical"
                      android:layout_marginStart="20dp"
                      android:layout_marginEnd="20dp"
                      android:layout_marginTop="30dp"
                      android:textColor="@android:color/white"
                      android:id="@+id/wednesdayText"
                      android:text="@string/placeholder_food"
            >
            </TextView>
            <TextView android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:textStyle="bold"
                      android:gravity="center|top"
                      android:layout_marginTop="10dp"
                      android:textColor="@android:color/white"
                      android:text="@string/wednesday"
            >
            </TextView>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
                android:id="@+id/thursday"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:backgroundTint="@color/colorPrimary"
                app:cardCornerRadius="4dp"
                android:layout_margin="10dp"
                app:layout_constraintTop_toBottomOf="@+id/wednesday"
                app:layout_constraintBottom_toTopOf="@+id/friday"
        >
            <TextView android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:gravity="center_vertical"
                      android:layout_marginStart="20dp"
                      android:layout_marginEnd="20dp"
                      android:layout_marginTop="30dp"
                      android:textColor="@android:color/white"
                      android:id="@+id/thursdayText"
                      android:text="@string/placeholder_food"
            >
            </TextView>
            <TextView android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:textStyle="bold"
                      android:gravity="center|top"
                      android:layout_marginTop="10dp"
                      android:textColor="@android:color/white"
                      android:text="@string/thursday"
            >
            </TextView>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
                android:id="@+id/friday"
                android:layout_width="match_parent"
                android:backgroundTint="@color/colorPrimary"
                app:cardCornerRadius="4dp"
                android:layout_margin="10dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@+id/thursday"
                app:layout_constraintBottom_toBottomOf="parent"
        >

            <TextView android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:gravity="center_vertical"
                      android:layout_marginStart="20dp"
                      android:layout_marginEnd="20dp"
                      android:layout_marginTop="30dp"
                      android:textColor="@android:color/white"
                      android:id="@+id/fridayText"
                      android:text="@string/placeholder_food"
            >
            </TextView>
            <TextView android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:textStyle="bold"
                      android:gravity="center|top"
                      android:layout_marginTop="10dp"
                      android:textColor="@android:color/white"
                      android:text="@string/friday"
            >
            </TextView>

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
